--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE'
 	}
 }
 
@@ -15,7 +15,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.starlabs'
+group = 'starlabs'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -25,13 +25,15 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
-	runtime('org.springframework.boot:spring-boot-devtools')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.postgresql:postgresql')
-	compile('org.projectlombok:lombok')
-	compile('javax.xml.bind:jaxb-api')
-	compile('com.sun.xml.bind:jaxb-core')
-	compile('com.sun.xml.bind:jaxb-impl')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile 'org.springframework.boot:spring-boot-starter-web'
+	runtime 'org.springframework.boot:spring-boot-devtools'
+	compile 'org.springframework:spring-web'
+	compile 'com.fasterxml.jackson.core:jackson-databind'
+	testCompile 'org.springframework.boot:spring-boot-starter-test'
+//	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	compile 'org.postgresql:postgresql'
+//	compile 'org.projectlombok:lombok'
+//	compile 'javax.xml.bind:jaxb-api'
+//	compile 'com.sun.xml.bind:jaxb-core'
+//	compile 'com.sun.xml.bind:jaxb-impl'
 }
