--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,13 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile 'org.postgresql:postgresql'
 	compile 'org.projectlombok:lombok'
-	compile 'javax.xml.bind:jaxb-api'
-	compile 'com.sun.xml.bind:jaxb-core'
-	compile 'com.sun.xml.bind:jaxb-impl'
-	
+//	compile 'javax.xml.bind:jaxb-api'
+	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
+//	compile 'com.sun.xml.bind:jaxb-core:2.3.0'
+	compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
+//	compile 'com.sun.xml.bind:jaxb-impl'
+	compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0'
+	compile group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
