Feature: Security auth2 full

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost/RadioGaGa
+spring.datasource.url=jdbc:postgresql://localhost/gaga
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-security.oauth2.client.clientId=
-security.oauth2.client.clientSecret=
+security.oauth2.client.clientId=775124611844-7lqed41o9akq9t92mvnt3hf8bp9pd66p.apps.googleusercontent.com
+security.oauth2.client.clientSecret=h8S_eMLiATz0rvpfQb5aCJiH
 security.oauth2.client.clientAuthenticationScheme=form
 security.oauth2.client.scope=openid,email,profile
 security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
@@ -15,3 +15,7 @@ security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userin
 security.oauth2.resource.preferTokenInfo=true
 
 server.port=8080
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
+spring.session.jdbc.schema=classpath:session_tables.sql
