--- a/build.gradle
+++ b/build.gradle
@@ -27,22 +27,21 @@ repositories {
 dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	runtime 'org.springframework.boot:spring-boot-devtools'
-	compile 'org.springframework:spring-web'
-	compile 'com.fasterxml.jackson.core:jackson-databind'
-	
-	compile 'org.springframework.boot:spring-boot-starter-security'
-	compile group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.0.0.RELEASE'
-
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile 'org.springframework.boot:spring-boot-starter-security'
+	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	compile 'org.springframework.session:spring-session-jdbc'
+	compile group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.0.0.RELEASE'
 	compile 'org.postgresql:postgresql'
 	compile 'org.projectlombok:lombok'
-//	compile 'javax.xml.bind:jaxb-api'
 	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
-//	compile 'com.sun.xml.bind:jaxb-core:2.3.0'
 	compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
-//	compile 'com.sun.xml.bind:jaxb-impl'
 	compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0'
-	compile group: 'org.javassist', name: 'javassist', version: '3.26.0-GA'
 
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
+
+	compile 'org.springframework:spring-web'
+	compile 'com.fasterxml.jackson.core:jackson-databind'
+	compile group: 'org.javassist', name: 'javassist', version: '3.26.0-GA'
 }
