--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ server.port=8080
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
-spring.session.jdbc.schema=classpath:session_tables.sql
+#spring.session.jdbc.schema=classpath:session_tables.sql
