--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,15 @@ repositories {
 
 
 dependencies {
+	//main
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	runtime 'org.springframework.boot:spring-boot-devtools'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile 'org.springframework.boot:spring-boot-starter-security'
 	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	//websocket
+	compile("org.springframework.boot:spring-boot-starter-websocket")
 
 	compile 'org.springframework.session:spring-session-jdbc'
 	compile group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.0.0.RELEASE'
@@ -38,8 +42,10 @@ dependencies {
 	compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
 	compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0'
 
+	//test
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 
+	//other
 	compile 'org.springframework:spring-web'
 	compile 'com.fasterxml.jackson.core:jackson-databind'
 	compile group: 'org.javassist', name: 'javassist', version: '3.26.0-GA'
