--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "@stomp/stompjs": "^5.0.0-beta.3",
+    "sockjs-client": "^1.3.0",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.1"
   },
